brocode-rs/tui_app_server/src/chatwidget/snapshots/brocode_tui_app_server__chatwidget__tests__guardian_approved_exec_renders_approved_request.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---





✔ Auto-reviewer approved brocode to run rm -f /tmp/guardian-approved.sqlite this
  time


› Ask brocode to do anything

  ? for shortcuts                                                                                    100% context left
