brocode-rs/tui_app_server/src/chatwidget/snapshots/brocode_tui_app_server__chatwidget__tests__interrupt_exec_marks_failed.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: exec_blob
---
■ Conversation interrupted - tell the model what to do differently. Something went wrong? Hit `/feedback` to report the issue.
