brocode-rs/tui_app_server/src/chatwidget/snapshots/brocode_tui_app_server__chatwidget__tests__model_picker_filters_hidden_models.snap
---
source: tui_app_server/src/chatwidget/tests.rs
assertion_line: 9556
expression: popup
---
  Select Model and Effort
  Access legacy models by running brocode -m <model_name> or in your config.to

› 1. test-visible-model (current)  test-visible-model description

  Press enter to select reasoning effort, or esc to dismiss.
