brocode-rs/tui_app_server/src/chatwidget/snapshots/brocode_tui_app_server__chatwidget__tests__personality_selection_popup.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: popup
---
  Select Personality
  Choose a communication style for brocode.

  1. Friendly             Warm, collaborative, and helpful.
› 2. Pragmatic (current)  Concise, task-focused, and direct.

  Press enter to confirm or esc to go back
